# internet_of_vehicles

./: README.md  environment.py  gui.py  iov_dataset.csv  main.py  pyproject.toml  setup.sh
