[tool.poetry]
name = "iov"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.1"
torch = "^2.5.1"  
numpy = "^1.22"
pandas = "^2.2.3"
matplotlib = "^3.5"
vmas = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
