[tool.poetry]
name = "iov"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.10"
# Add the platform-specific Toga backend
toga-cocoa = { version = "^0.3.0.dev22" }  # Use the latest compatible version
# Other dependencies
torch = "^2.1.2"
torchaudio = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.31.0"
matplotlib = "^3.7"
numpy = "^1.21"
vmas = "^1.4.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
